--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,6 +1,7 @@
 .header{
   background: url(https://assets3.insales.ru/assets/1/3314/888050/1547865036/header_slide_1-loaded.jpg) center top no-repeat;
   color: #ffffff;
+  max-height:200px;
 }
 
 .headertop {
@@ -15,7 +16,6 @@
   display: flex;
   justify-content: space-between;
   padding-right: 20px;
-  
 }
 
 .leftside {
@@ -74,6 +74,10 @@
 
 .menu_list{
   list-style-type: none;
+}
+a {
+  text-decoration: none;
+  color: black;
 }
 
 .menu_item{
